2006-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/generic-vars.make: new function absdir.

	* scripts/convert-ly.py (bindir): use optparse, argv[0] relocation.

	* scripts/lilypond-book.py (find_file): use global_options for
	include path

	* scm/ps-to-png.scm (ps-page-count): prevent null characters
	entering C code.

2006-03-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py (get_global_option): ughness for extracting
	global options from lilylib.
	(NonDentedHeadingFormatter.format_heading): move from musicxml2ly

	* scripts/lilypond-book.py (get_option_parser): use optparse for
	option handling.  Put options in global_options variable.

2006-02-28  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: clarify.

2006-02-28  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/layout-page-layout.scm (write-page-breaks): add a
	music-system-heights property to the page layout output.

	* scm/page.scm (make-page-stencil): take footer into account when
	computing the 'space-left page property
	(annotate-space-left): take footer into account when annonating
	space left.

2006-02-28  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ advanced-notation, global: more (final)
	docs for music expressions, removed special fermatas.

2006-02-27  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ basic-notation, global: minor changes
	from mailist.

2006-02-26  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/framework-ps.scm: 	
	* scm/lily-library.scm (nan?, inf?): Move guile 1.6 compatibility
	layer for inf? and nan? from framework-ps to lily-library.

2006-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(outdir)/emmentaler-$(1).otf
	$(outdir)/emmentaler-$(1).svg): remove backslashes from define endef.

	* buildscripts/substitute-encoding.py (Module): remove file.

	* mf/GNUmakefile: more PFA strippage.

	* mf/aybabtu.pe.in (i): remove PFAaybabtu generation
